documents cours presque OK

--- a/app/Resources/views/documents/commonJs.html.twig
+++ b/app/Resources/views/documents/commonJs.html.twig
@@ -51,6 +51,7 @@
                         id: docId
                     },
                     success: function (data) {
+                        window.location.href = window.location.href;
                     },
                     error: function (xhr, status, error) {
                     }
