documents OK sauf notifs

--- a/app/Resources/views/cours/one.html.twig
+++ b/app/Resources/views/cours/one.html.twig
@@ -272,7 +272,7 @@
                     {% endfor %}
                     {% if cours.docsActivated==1 %}
                         <li role="presentation"  class="ongletSection">
-                            <a href="#sectionDocs" aria-controls="sectionDocs" role="tab" data-toggle="tab" aria-expanded="true"><i class="fa fa-pencil fa-fw" aria-hidden="true"> </i>Documents</a>
+                            <a href="#sectionDocs" aria-controls="sectionDocs" role="tab" data-toggle="tab" aria-expanded="true"><i class="fa fa-pencil fa-fw" aria-hidden="true"> </i>Documents partagés</a>
                         </li>
                     {% endif %}
                 </ul>
