--- a/app/Resources/views/cours/oneAdmin.html.twig
+++ b/app/Resources/views/cours/oneAdmin.html.twig
@@ -1250,7 +1250,7 @@
                             </div>
                             <div class="course-detail">
                                 <h4 class="heading">Mes documents partagés</h4>
-                                <label class="ml-10"> Visibles pour les utilisateurs</label>
+                                <label class="ml-10"> Activer le partage</label>
                                 <div class="myBtn btnAlone btnAdmin col-xs-1">
                                     {% if cours.docsActivated %}
                                         <i class="activationDocBtn fa fa-check-square-o"></i>
