--- a/app/Resources/views/discipline/myCourses.html.twig
+++ b/app/Resources/views/discipline/myCourses.html.twig
@@ -62,7 +62,7 @@
                                                 <div class="course-detail">
                                                     <h4 class="heading">Mes documents partagés</h4>
                                                     {% if app.user.hasRole('ROLE_SUPER_ADMIN') %}
-                                                        <label class="ml-10"> Visibles pour les utilisateurs</label>
+                                                        <label class="ml-10"> Activer le partage</label>
                                                         <div class="myBtn btnAlone btnAdmin col-xs-1">
                                                             {% if val.discipline.docsActivated %}
                                                                 <i class="activationDocBtn fa fa-check-square-o"></i>
