--- a/app/Resources/views/documents/byDisc.html.twig
+++ b/app/Resources/views/documents/byDisc.html.twig
@@ -71,6 +71,7 @@
                                     urlDest: url,
                                     currentUrl: window.location.pathname,
                                     nom: $('[data-champname="nom"]').val(),
+                                    isImportant: $('[data-champname="docIsImportant"]').prop('checked'),
                                     description: CKEDITOR.instances[$('[data-champName=description]').attr('id')].getData(),
                                     users: usersSelected
                                 },
@@ -98,9 +99,7 @@
     </script>
 
     <div class="bgcolor3 pt-100 pb-100" data-discId="{{ discipline.id }}">
-        {% include "documents/docArray.html.twig"
-            with {documents:documents}
-        %}
+        {% include "documents/docArrays.html.twig" %}
     </div>
 
     {% include "documents/modal.html.twig"
