--- a/app/Resources/views/documents/byDisc.html.twig
+++ b/app/Resources/views/documents/byDisc.html.twig
@@ -15,7 +15,7 @@
     <script src="{{ asset('vendors/jquery-ui/jquery-ui.min.js') }}" type=text/javascript></script>
     <script src="{{ asset('educomp/ckeditor/ckeditor.js') }}"></script>
     <script src="{{ asset('educomp/ckeditor/adapters/jquery.js') }}"></script>
-    {% include 'documents/commonJS.html.twig' %}
+    {% include 'documents/commonJs.html.twig' %}
     <script>
         jQuery(document).ready(function () {
             $('.openPopupUpload').click(function() {
