documents OK sauf notifs

--- a/app/Resources/views/documents/byDisc.html.twig
+++ b/app/Resources/views/documents/byDisc.html.twig
@@ -31,7 +31,7 @@
                 var popup = $('.modal .modal-body[data-contentModal=appendDoc]');
                 popup.show();
 
-                var folderLocation = 'var/upload/';
+                var folderLocation = $('[data-folderUpload]').attr('data-folderUpload');
                 var url = '../'+folderLocation+'docs/disc/'+idDisc+'/';
 
                 $.ajax({
