--- a/app/Resources/views/documents/modal.html.twig
+++ b/app/Resources/views/documents/modal.html.twig
@@ -60,7 +60,7 @@
                                     <span class="btn btn-success fileinput-button">
                                         <i class="glyphicon glyphicon-plus"></i>
                                         <span>Déposer mon fichier</span>
-                                        <input id="docUpload" type="file" name="files[]" multiple data-folderUpload="{{ folderUpload }}">
+                                        <input id="docUpload" type="file" name="files[]" multiple data-folderUpload="{{ folderUpload }}" data-uploadSteps="{{ uploadSteps }}">
                                     </span>
 
                                     <div id="itemProgress" class="progress col-xs-12">
