--- a/app/Resources/views/documents/byDisc.html.twig
+++ b/app/Resources/views/documents/byDisc.html.twig
@@ -49,7 +49,7 @@
                 });
 
                 $('#docUpload').fileupload({
-                    url: '../../../'+folderLocation,
+                    url: $('[data-uploadSteps]').attr('data-uploadSteps')+folderLocation,
                     dropZone:null,
                     dataType: 'json',
                     done: function (e, data) {
@@ -77,7 +77,7 @@
                                 },
                                 success: function (data) {
                                     $('.modal').modal('toggle');
-                                    window.location.href = window.location.href;
+                                    //window.location.href = window.location.href;
                                 },
                                 error: function(xhr, status, error) {
                                     $('.modal').modal('toggle');
