documents OK sauf notifs

--- a/app/Resources/views/documents/byDisc.html.twig
+++ b/app/Resources/views/documents/byDisc.html.twig
@@ -54,6 +54,7 @@
                     dataType: 'json',
                     done: function (e, data) {
                         $.each(data.result.files, function (index, file) {
+                            console.log(file.url);
                             var myUrlTab = file.url.split(folderLocation);
 
                             var usersSelected = $('.selectpicker').val();
