--- a/app/Resources/views/documents/byDisc.html.twig
+++ b/app/Resources/views/documents/byDisc.html.twig
@@ -18,6 +18,10 @@
     {% include 'documents/commonJs.html.twig' %}
     <script>
         jQuery(document).ready(function () {
+            var test = 'http://http://afadec.demo.studit.fr/lms/var/upload/files/test92770260.png';
+            console.log(test);
+            var test2 = test.split('var/upload/');
+            console.log(test2);
             $('.openPopupUpload').click(function() {
                 $('[data-champname="nom"]').removeClass('champError').val('');
                 $('.contentDocInfos').show();
@@ -56,6 +60,7 @@
                         $.each(data.result.files, function (index, file) {
 
                             var myUrlTab = file.url.split(folderLocation);
+                            console.log(folderLocation)
                             console.log(myUrlTab);
                             console.log(myUrlTab[1]);
                             var usersSelected = $('.selectpicker').val();
