--- a/app/Resources/views/documents/byCours.html.twig
+++ b/app/Resources/views/documents/byCours.html.twig
@@ -23,6 +23,9 @@
     {% include 'documents/commonJs.html.twig' %}
     <script>
         jQuery(document).ready(function () {
+            var steps = $('[data-uploadSteps]').attr('data-uploadSteps');
+            var upload_srcSteps = $('[data-uploadSrcSteps]').attr('data-uploadSrcSteps');
+
             $('.openPopupUpload').click(function() {
                 $('[data-champname="nom"]').removeClass('champError').val('');
                 $('.contentDocInfos').show();
@@ -37,7 +40,7 @@
                 popup.show();
 
                 var folderLocation = $('[data-folderUpload]').attr('data-folderUpload');
-                var url = '../'+folderLocation+'docs/cours/'+idCours+'/';
+                var url = steps + folderLocation+'docs/cours/'+idCours+'/';
 
                 $.ajax({
                     type: 'POST',
@@ -54,7 +57,7 @@
                 });
 
                 $('#docUpload').fileupload({
-                    url: '../'+$('[data-uploadSteps]').attr('data-uploadSteps')+folderLocation,
+                    url: steps + upload_srcSteps + folderLocation,
                     dropZone:null,
                     dataType: 'json',
                     done: function (e, data) {
@@ -72,7 +75,7 @@
                                 data: {
                                     coursId: idCours,
                                     userId: $('[data-userId]').attr('data-userId'),
-                                    url: '../'+folderLocation+myUrlTab[1],
+                                    url: steps + folderLocation + myUrlTab[1],
                                     urlDest: url,
                                     currentUrl: window.location.pathname,
                                     nom: $('[data-champname="nom"]').val(),
@@ -82,7 +85,7 @@
                                 },
                                 success: function (data) {
                                     $('.modal').modal('toggle');
-                                    window.location.href = window.location.href;
+                                    //window.location.href = window.location.href;
                                 },
                                 error: function(xhr, status, error) {
                                     $('.modal').modal('toggle');
