--- a/app/Resources/views/documents/byDisc.html.twig
+++ b/app/Resources/views/documents/byDisc.html.twig
@@ -81,7 +81,7 @@
                                 },
                                 success: function (data) {
                                     $('.modal').modal('toggle');
-                                    //window.location.href = window.location.href;
+                                    window.location.href = window.location.href;
                                 },
                                 error: function(xhr, status, error) {
                                     $('.modal').modal('toggle');
